// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CTypeDetails should handle nested CType 1`] = `
"<section class="_container_lf0xe_1">
  <h1 class="title">Example nested CType</h1>

  <dl class="">
    <dt class="">Creator:</dt>
    <dd class="">did:kilt:4pehddkhEanexVTTzWAtrrfo2R7xPnePpuiJLC7shQU894aY</dd>

    <dt class="">Description:</dt>
    <dd class="">This is an example of a CType with a nested CType</dd>

    <dt id="/properties/example" class="">Property 1:</dt>
    <dd class=""><a href="/kilt:ctype:0x1" class="">example</a></dd>

    <dt id="/properties/hasNestedCType" class="">Property 2:</dt>
    <dd class="">hasNestedCType</dd>

    <div class="indent">
      <dt class="">Type:</dt>
      <dd class="">boolean</dd>
    </div>

    <dt class="">Creation date:</dt>
    <dd class="">5/1/2023, 12:00:00 PM</dd>

    <dt class="">Extrinsic:</dt>
    <dd class="">
      <a href="https://example.subscan.io/extrinsic/0xexamplehash" class="">
        0xexamplehash
      </a>
    </dd>

    <dt class="">Technical Details: <button class="toggleDetails"></button></dt>
    <dd class="technicalDetails" hidden>
      <pre class="">
{
  &quot;$id&quot;: &quot;kilt:ctype:0x1692376199a5a74445bec96882d2d0313042d445906e6faa21f30949150a3779&quot;,
  &quot;$schema&quot;: &quot;http://kilt-protocol.org/draft-01/ctype#&quot;,
  &quot;properties&quot;: {
    &quot;example&quot;: {
      &quot;$ref&quot;: &quot;kilt:ctype:0x1&quot;
    },
    &quot;hasNestedCType&quot;: {
      &quot;type&quot;: &quot;boolean&quot;
    }
  },
  &quot;title&quot;: &quot;Example nested CType&quot;,
  &quot;type&quot;: &quot;object&quot;
}</pre
      >
    </dd>
  </dl>
</section>
"
`;

exports[`CTypeDetails should handle nested CType property 1`] = `
"<section class="_container_lf0xe_1">
  <h1 class="title">Example nested CType property</h1>

  <dl class="">
    <dt class="">Creator:</dt>
    <dd class="">did:kilt:4pehddkhEanexVTTzWAtrrfo2R7xPnePpuiJLC7shQU894aY</dd>

    <dt class="">Description:</dt>
    <dd class="">This is an example of a CType with a nested property</dd>

    <dt id="/properties/example" class="">Property 1:</dt>
    <dd class="">
      <a href="/kilt:ctype:0x1#/properties/example" class="">example</a>
    </dd>

    <dt id="/properties/hasNestedProperty" class="">Property 2:</dt>
    <dd class="">hasNestedProperty</dd>

    <div class="indent">
      <dt class="">Type:</dt>
      <dd class="">boolean</dd>
    </div>

    <dt class="">Creation date:</dt>
    <dd class="">5/1/2023, 12:00:00 PM</dd>

    <dt class="">Extrinsic:</dt>
    <dd class="">
      <a
        href="https://example.subscan.io/extrinsic/0xexamplenestedhash"
        class=""
      >
        0xexamplenestedhash
      </a>
    </dd>

    <dt class="">Technical Details: <button class="toggleDetails"></button></dt>
    <dd class="technicalDetails" hidden>
      <pre class="">
{
  &quot;$id&quot;: &quot;kilt:ctype:0x9775780b45911ece6e960dcc3eb630ea1579988d0b58c1ee2a19e2b14eeb9904&quot;,
  &quot;$schema&quot;: &quot;http://kilt-protocol.org/draft-01/ctype#&quot;,
  &quot;properties&quot;: {
    &quot;example&quot;: {
      &quot;$ref&quot;: &quot;kilt:ctype:0x1#/properties/example&quot;
    },
    &quot;hasNestedProperty&quot;: {
      &quot;type&quot;: &quot;boolean&quot;
    }
  },
  &quot;title&quot;: &quot;Example nested CType property&quot;,
  &quot;type&quot;: &quot;object&quot;
}</pre
      >
    </dd>
  </dl>
</section>
"
`;

exports[`CTypeDetails should match snapshot 1`] = `
"<section class="_container_lf0xe_1">
  <h1 class="title">Example CType</h1>

  <dl class="">
    <dt class="">Creator:</dt>
    <dd class="">did:kilt:4pehddkhEanexVTTzWAtrrfo2R7xPnePpuiJLC7shQU894aY</dd>

    <dt class="">Description:</dt>
    <dd class="">This is some example cType data</dd>

    <dt id="/properties/example" class="">Property 1:</dt>
    <dd class="">example</dd>

    <div class="indent">
      <dt class="">Type:</dt>
      <dd class="">string</dd>
    </div>
    <dt id="/properties/isExample" class="">Property 2:</dt>
    <dd class="">isExample</dd>

    <div class="indent">
      <dt class="">Type:</dt>
      <dd class="">boolean</dd>
    </div>

    <dt class="">Creation date:</dt>
    <dd class="">5/1/2023, 12:00:00 PM</dd>

    <dt class="">Extrinsic:</dt>
    <dd class="">
      <a href="https://example.subscan.io/extrinsic/0xexamplehash" class="">
        0xexamplehash
      </a>
    </dd>

    <dt class="">Technical Details: <button class="toggleDetails"></button></dt>
    <dd class="technicalDetails" hidden>
      <pre class="">
{
  &quot;$id&quot;: &quot;kilt:ctype:0xf3b3e856755acaa7f274a15b99baf636a306a2a96e1c324a8cbb12b0bc1716af&quot;,
  &quot;$schema&quot;: &quot;http://kilt-protocol.org/draft-01/ctype#&quot;,
  &quot;properties&quot;: {
    &quot;example&quot;: {
      &quot;type&quot;: &quot;string&quot;
    },
    &quot;isExample&quot;: {
      &quot;type&quot;: &quot;boolean&quot;
    }
  },
  &quot;title&quot;: &quot;Example CType&quot;,
  &quot;type&quot;: &quot;object&quot;
}</pre
      >
    </dd>
  </dl>
</section>
"
`;
